tests/out/error/other/is_private.out
tests/out/error/other/is_private.in.bt:4:2 error: type bait.test_pkgs.pubpriv.PrivStruct is private
tests/out/error/other/is_private.in.bt:5:2 error: type bait.test_pkgs.pubpriv.PrivStruct is private
tests/out/error/other/is_private.in.bt:8:24 error: struct bait.test_pkgs.pubpriv.PrivStruct is private
tests/out/error/other/is_private.in.bt:10:22 error: enum bait.test_pkgs.pubpriv.PrivEnum is private
tests/out/error/other/is_private.in.bt:11:9 error: type bait.test_pkgs.pubpriv.PrivEnum is private
tests/out/error/other/is_private.in.bt:15:1 error: const bait.test_pkgs.pubpriv.PRIV_CONST is private
tests/out/error/other/is_private.in.bt:15:17 error: function bait.test_pkgs.pubpriv.priv_fun is private
tests/out/error/other/is_private.in.bt:18:15 error: method priv_method is private
